--- a/Homework 10.html
+++ b/Homework 10.html
@@ -1,6 +1,37 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
+
+
 <head>
-    <title>My first HTML Document</title>
+
+
+    <meta charset="UTF-8">
+
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
+    <script src="https://cdn.jsdelivr.net/npm/vega@5.20.2"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.1.0"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.17.0"></script>
+
+    <script src="vega_lite_vis.js"></script>
+
+    <title>Vega-lite graph</title>
+
 </head>
+
 <body>
+    
+    <h2>Primary Education in different countries</h2>
+    <div id="bar_chart"></div>
+
+    <h2>Education of Countries in Map</h2>
+    <div id="map_visualisation"></div>
+
+</body>
